[package]
name = "something-about-rust"
version = "0.1.0"
authors = ["Euclidr <euclidry@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"

[workspace]

members = [
    "yield_curve",
    "rfeatures",
    "radix-tree",
    "skiplist",
    "httproxy",
]

[[examples]]
name = "impl_trait_mut_param"
path = "examples/impl_trait_mut_param.rs"
