[package]
name = "something-about-rust"
version = "0.1.0"
authors = ["Euclidr <euclidry@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"

[dev-dependencies]
bitflags = "1.2.0"

[workspace]

members = [
    "yield_curve",
    "rfeatures",
    "radix-tree",
    "skiplist",
    "dynimpl",
#    "httproxy",
]

[[examples]]
name = "impl_trait_mut_param"
path = "examples/impl_trait_mut_param.rs"

[[examples]]
name = "unsafe_pointer_behavior"
path = "examples/unsafe_pointer_behavior.rs"

[[examples]]
name = "bitflag_expand"
path = "examples/bitflag_expand.rs"

[[examples]]
name = "memory_alignment"
path = "examples/memory_alignment.rs"