[package]
name = "yield_curve"
version = "0.1.0"
authors = ["Euclidr <euclidry@gmail.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"
futures = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
select = "0.4.2"
hyper-tls = "0.3"
url = "1.7.2"
http = "0.1.17"
chrono = "0.4.6"
time = "0.1.42"
lazy_static = "1.3.0"